[project]
name = "pdf2graph"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "docling (>=2.17.0,<3.0.0)",
    "ipython (>=8.32.0,<9.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "crewai[tools] (>=0.100.1,<0.101.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
